# ChangeLog for gnome-base/gdm
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gdm/ChangeLog,v 1.374 2013/07/17 21:37:00 pacho Exp $

  17 Jul 2013; Pacho Ramos <pacho@gentoo.org> gdm-3.8.3.1.ebuild:
  Changing perms of /run here doesn't make sense as they are regenerated on each
  boot, anyway, looks like permissions are being properly handled and no
  distribution is neither needing to change them via tmpfiles.d

*gdm-3.8.3.1 (14 Jul 2013)

  14 Jul 2013; Pacho Ramos <pacho@gentoo.org> +gdm-3.8.3.1.ebuild:
  Version bump, use more upstream stuff (like exherbo pam.d files, systemd
  units), systemd is required as upstream only cares about it (#463784) and we
  will need systemd for other Gnome 3.8 parts (also, logind cannot be run
  without systemd from >= 205).

*gdm-3.6.2-r1 (20 May 2013)

  20 May 2013; Gilles Dartiguelongue <eva@gentoo.org> +gdm-3.6.2-r1.ebuild:
  Backport consolekit path fix, bug #461866.

  05 May 2013; Justin Lecher <jlec@gentoo.org> gdm-3.6.2.ebuild,
  gdm-3.8.0.ebuild:
  Fix obsolete macros to work with automake-1.13, #468608

*gdm-3.8.0 (28 Mar 2013)

  28 Mar 2013; Pacho Ramos <pacho@gentoo.org>
  +files/gdm-3.7.3.1-disable-accessibility.patch,
  +files/gdm-3.7.90-fix-daemonize-regression.patch, +gdm-3.8.0.ebuild:
  Version bump for Gnome 3.8

  14 Mar 2013; Alexandre Rostovtsev <tetromino@gentoo.org> gdm-3.6.2.ebuild:
  Remove unnecessary dependency on consolekit[pam] and pam[consolekit], thanks
  to Samuli Suominen (bug #461688)

  07 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> metadata.xml:
  Remove unused or redundant USE flag description.

  07 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gdm-2.32.0-automagic-libxklavier-support.patch, -files/3.4.1/gdm,
  -files/gdm-2.32.0-custom-session.patch, -files/3.4.1/gdm.service,
  -files/gdm-2.32.0-fix-daemonize-regression.patch, -files/3.4.1/gdm-autologin,