@@ -39,13 +39,13 @@ EBUILD gdm-2.20.11-r1.ebuild 7213 SHA256 71ac1e2eaaac38e36b3a11fc9bd883399e57b0b
 EBUILD gdm-3.6.2-r1.ebuild 8125 SHA256 3992ffe031d3244fa8fb8d349120e58ced57f15930246a65ead05bf0596d16de SHA512 ee3ad68374d8ffbf09c0eeb212a02b03c069ed30c10936136d8123364c0962cf10874844b2e4b6ebd1891e75e945eca439fefa8f6baaf0bc5ecba03ad3874333 WHIRLPOOL 18f95e54da52ebfca663ba5087f6d428707314ba7bcec70a4e716a8df177b6cadf59a20448a3e0a4d3c81ad7b8a11aa3f0ea9230d875ae0f82efff309c0b5989
 EBUILD gdm-3.6.2.ebuild 8038 SHA256 87b27f6d367dad8c2c4b28f0d103eb7c22faece16065bf4585e93e43d17646e5 SHA512 23fd18fd08928e2205f89744f3de9ca1b4ce9440bfbecd700bc0d150162122cbe8a019850580daac1130914fcc70783481a163a5aac47cbbd5b37018971db106 WHIRLPOOL bf9ffc84d8f50f248e083ecb518150f97e6d382b0c4220aec12c3cb9e216332aa66378b9c21261dc42e78392c4e35055b917b46e830809b9d1b3d821cf1723eb
 EBUILD gdm-3.8.0.ebuild 7896 SHA256 34d4c40b63d4771462422ad6d893f2098d087539ccecc102d87d8075f96fee7b SHA512 217e6602f64f1a0b39323376f516f8a814679128f51ef324385e3a1ca29b1decd1c17c105634e551e132f2970a80ad66ea939135334c176b0623ad1e69274bce WHIRLPOOL 1ef57963321faffd68972171b8bde16e49b86ef89a06c25f2ce242a3414cf6fff3e147d7d1d091d863fec6963334bb4e879239bbae07b387cad3ac4963cf42d8
-EBUILD gdm-3.8.3.1.ebuild 6503 SHA256 bf2230a401bc9f04f5c072566db986d9738d3c948d3bf48c791832c9bbafc11c SHA512 56657e5aa84315055f0e952fd35a7f9c11015a312eb6cb3782841837e5fc196f922708c5370bb4999705d4141c4691a40ae7f164d57e4f5945eb3823fd8d6c63 WHIRLPOOL a83a35e603cdf5ce13ae96c89b4c7fdfa5b9d645b649540cfbbebb3fad1d0e71f7e8ff02b5838857eaccd66e8c04680be24c344d4c40481a32228b238caf8bb2
-MISC ChangeLog 56606 SHA256 82f030cb0f3e173385d6c95f6e0d4d88e3b7fccb7aaac328810db1a71ad371f5 SHA512 856fc9c1499f56431861cf32e4251e87fb3eb96645901c661b9db56763bb63c241c78f9e7d6421404954cf093035df35d2be28372e6ef89d11fd2f495a0ab97e WHIRLPOOL 3a2c62be06f57d251b58abd4bca841ef19f79a4d833f2ccabf4752515c26406f3fcbdbab2c1ccb8afc7180bdfe899ad1ac736582ca61a7309ef022eb8b9b6dc3
+EBUILD gdm-3.8.3.1.ebuild 6478 SHA256 49a849478af58619f04b02e94a87069bcbdc17abb220a34c87ed52777ac054d2 SHA512 ea80e22b4ddf78674ece2481e63785cddb7c9469bcf6729a76e8bcf98662f1ea272e7a910d762ec690baf7233d62c9c8c43807261a8da430d12156e76bb78976 WHIRLPOOL 39e05ef0208e6735c437ebaa9d32f0c712f3e9ed2a1a836c6c60b7884263fdf4b74ccf2e245085eb646465e5ea022034958d1dfa0197156f596c4b7432035442
+MISC ChangeLog 56697 SHA256 8ecaeb68ca676060d2eabeec881d510f84e56d3adf83af08e6f4ffd521829dbe SHA512 c0db8f29718eb6c108aa58e3420c5d166896421da401744ee76acdb7511ab9cc4f27adc21a0ce69e48bad08d8351b03be900475010e4145f294c5939b75a5018 WHIRLPOOL 6af773e6e648e0d2b52a7dd824180fb19761cdedfcd2029a957fb426086fcfeea5063fe5737d431442b1bcb59cb8d44f01d0f667fe91603dfd1413473e95fdb7
 MISC metadata.xml 1022 SHA256 37e58ae7dcad61901d81d13c5594664f8d4c6b6ff44171884e6ac65b3561625b SHA512 91b08a96b496de46786985dfc069d51886d6507a15c25b2731f8272bc8bc170644744b88216f9eb2943274a752ff4c6bb6577c543cded31d745d92cc7781e286 WHIRLPOOL 863c72a48f63279bcd4762e652c2c25b17b4d07fda26c3a43828240206d10bfb5e68461523572c081fdbcc9e097930c873d7e5604fd2d8d77e4cc6edec08885a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlHnDn0ACgkQCaWpQKGI+9QtDACfTGT9RMHXTEB6QCN4uk7F/cUp
-tdMAniU6iOtouMlpy894pYeNHFcvGQfy
-=t264
+iEYEAREIAAYFAlHwwXkACgkQCaWpQKGI+9Sw1ACdHqIfLbIUzb6f8vd//gH5dHRo
+nTsAn2UR7RP2xI1+IsL3DoAuCpBsfnQr
+=LwRA
 -----END PGP SIGNATURE-----
