@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gdm/Attic/gdm-3.8.3.1.ebuild,v 1.2 2013/07/17 21:37:00 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gdm/Attic/gdm-3.8.3.1.ebuild,v 1.3 2013/07/25 06:11:03 pacho Exp $
 
 EAPI="5"
 GNOME2_LA_PUNT="yes"
@@ -13,7 +13,7 @@ HOMEPAGE="https://live.gnome.org/GDM"
 LICENSE="GPL-2+"
 SLOT="0"
 IUSE="accessibility audit +fallback fprint +gnome-shell +introspection ipv6 plymouth selinux smartcard tcpd test xinerama"
-KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86"
+KEYWORDS="~amd64 ~arm ~ppc64 ~sh ~x86"
 
 # NOTE: x11-base/xorg-server dep is for X_SERVER_PATH etc, bug #295686
 # nspr used by smartcard extension
