@@ -13,13 +13,13 @@ DIST gnome-shell-3.8.3-patches.tar.xz 6520 SHA256 d197856e1ba4cf56f57f0c05b048ef
 DIST gnome-shell-3.8.3.tar.xz 1513636 SHA256 145724f21ead9dbe0c39d3ab468b39264c7aaf3f0fa5d152b295d905d8339c22 SHA512 d95a7ce24073046ea196b1f299bef1a1f4581b3357da364162b7e1cc53d051e628625c0b74bcd835d60f77d39874c8e0f86e3f66c0205539179f64cbe983a16b WHIRLPOOL 9ed4566761115346f0db8e35b0da9f5409418e78176b5159a41541a6723e511bbdaa50b0808c387f8339651066452934732c5c384fabaa7a5427be8ab5e9ec9e
 EBUILD gnome-shell-3.6.3.1.ebuild 7138 SHA256 e8e1bf07cb3768a303714db4fd16b3ba59adc67624ee4b83de35a8b1a3d17f25 SHA512 600e3a5c38dfe9742d4d0540b8cc6a87fc5bf663d99cd76fcc160a0ce97f967e3d93fb750120e30abee8580c84c00cf8ba08190e9f856e34938afdb01ab3574b WHIRLPOOL 30c66e7a010818f69d0387c145041bdcc2354f44e83939796c9b3ace20e77b5e469838f055da342451baa24e940474f0aec4e74fce8e92434fbb98c0334de6c6
 EBUILD gnome-shell-3.8.3-r1.ebuild 7495 SHA256 273bb41e5e94b5c7d4aa60479f4e7ab7bd879a8a2c8dd8df81ead908f2ebe791 SHA512 7ba5100b00703cac02b8250475af9fff39ce26544b068ad35dc7e068fb02b899dc904bcb6eaadee917183f421ec5d74eb9dfa7c6b5a5be33d30cee8635a9dd35 WHIRLPOOL 92af13771f371a3c46512446490d3c7ac0ba94b98ab4233927dd554da86d8e07a18b5810e6ca68c515421962d4af1b7e2afbf8aa1c70407dcfdbdef9a3658b8b
-EBUILD gnome-shell-3.8.3-r2.ebuild 7562 SHA256 d46bf5fc3057d2fac6ee0d63d88dc6837437f5fcd57f0f1f96c2b24b0423de45 SHA512 72b5cd46a984b1aa89771bfc819e30ac873457a74ac1623658ec5548db754220160d517472acc4f35d51312e59cdef5aec8f1a2de7dd088722ccfb5ceb1ede36 WHIRLPOOL f940928668cca67ae3496fa679aa3501e989419834d341791548c7731f42583a517a14a2ea85ab27a0646fb23737cf1bfb59c9c00c461d2e837852b45b3c91b2
-MISC ChangeLog 9602 SHA256 451d47540906ca2c14546cd58f7f693742fa9d5379e117e048dd8d18c8bcb13b SHA512 eac500b900a9ac47f1360d52dfc86fb4062a4f50b3fc23302ca500110fa6b460f1607fca70bc2461e85fe3494f6c60633e4e2ffc5cc470e66a049e3a8398507e WHIRLPOOL c6555d2dd7dc7a24a25b388f23d50f23d574be22e67e0cd3b54ed82d47778cd43b3db62ffc2e21247709c444ce5d5903022d5491f484f8b5a65e677f38dc8550
+EBUILD gnome-shell-3.8.3-r2.ebuild 7543 SHA256 9286a5ff2f76c414df1ff139b8cf38dfc9f58d2bc45e5682e75928c95555cac4 SHA512 2ea9d92131a37943cde794b543b375af934b97f8772789580828c539bc6f4abbe58f0f7af90d19fdd4ad6c9f51f74bddf7f550d0860b80c169524085d6acfb62 WHIRLPOOL f9c3b31c2ac4d13710a53563dc658b181f53dbbda927fe48e946fb3234deb86b6327f5d36a18ba61325a0351b7da5b84532c44406b56d8ea5910bd952b298cfb
+MISC ChangeLog 9702 SHA256 84e3a2544872ca379e0df6428d6669c2a32296c83d4a7b3ceb1837a573dab387 SHA512 8952337c2fd9004d55565a7eb16c9571b5fec34a9132b18c6ca209f96da6add80624b3ece792bb639c4c3cd62315ee988b5265af97fb97c579f625e7e03d2e89 WHIRLPOOL 3750c9ed1ea14f0187db4f113d2c10878f9648c8bb161b52a55bff53b07367c2216317499e48d61b409a6264e05b1f0c1062b6eb86b06c20f6e7abc47cb75ddc
 MISC metadata.xml 400 SHA256 23973e81d0dce0aa3c01a805dc6baa386c626c07015e8b0675b3402f7850b88f SHA512 5efbd89e333f41da839f6f18bdbbb236efd42642d57eb0317d448bbcd54fef36289125fc534d6bf1441eb852983c5dacda98712c4f1c6633b040305f1fc133f9 WHIRLPOOL a2e8a25716a103c6c123b4afd3393419ccc723c8f198cfa8dfa84666095ac231fac5253b4d5d0de9baff357f598edaa163605bb23673c7d72314585b7a5dceb3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlHqaD8ACgkQCaWpQKGI+9TbNgCfZQ8NI7Se5cD6lHKzZYR6sEZl
-iaAAnjufFykoaSmDvtQ6BsfMqcS42UtS
-=RL65
+iEYEAREIAAYFAlHwwMQACgkQCaWpQKGI+9QMYgCeOAntYZOVk2quArZTc2LidlgN
+ZvIAn1Ri0GxvFoH3Tf//1xoXaEVa/1HN
+=VprA
 -----END PGP SIGNATURE-----
