@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gnome-shell
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-shell/ChangeLog,v 1.39 2013/07/20 10:36:46 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-shell/ChangeLog,v 1.40 2013/07/25 06:08:03 pacho Exp $
+
+  25 Jul 2013; Pacho Ramos <pacho@gentoo.org> gnome-shell-3.8.3-r2.ebuild:
+  Drop keywords #478076
 
 *gnome-shell-3.8.3-r2 (20 Jul 2013)
 
