@@ -1,6 +1,9 @@
 # ChangeLog for gnome-base/gdm
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gdm/ChangeLog,v 1.374 2013/07/17 21:37:00 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gdm/ChangeLog,v 1.375 2013/07/25 06:11:03 pacho Exp $
+
+  25 Jul 2013; Pacho Ramos <pacho@gentoo.org> gdm-3.8.3.1.ebuild:
+  Drop keywords #478076
 
   17 Jul 2013; Pacho Ramos <pacho@gentoo.org> gdm-3.8.3.1.ebuild:
   Changing perms of /run here doesn't make sense as they are regenerated on each
